log
Mon 13 May 2024 11:26:04 PM UTC: 
 tests:  0|5
total_score: 0/70
8bf7259
Tue 14 May 2024 12:26:32 AM UTC: 
 sudoku.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
 tests:  1|5
total_score: 5/70
4c5f138
Tue 14 May 2024 12:27:03 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:58:32: error: multi-character character constant [-Werror=multichar]
   58 |            if(n->sudo[i][j] == '/0'){
      |                                ^~~~
cc1: all warnings being treated as errors
Compilation failed
8821ca1
Tue 14 May 2024 12:28:10 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 5/70
60a0e05
Tue 14 May 2024 12:30:52 AM UTC: 
 sudoku.c | 18 +++---------------
 1 file changed, 3 insertions(+), 15 deletions(-)
 tests:  1|5
total_score: 5/70
ff96a12
Tue 14 May 2024 12:31:25 AM UTC: 
 sudoku.c | 27 +++++++++++++++++++++++----
 1 file changed, 23 insertions(+), 4 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:76:9: error: implicit declaration of function ‘appendList’ [-Werror=implicit-function-declaration]
   76 |         appendList(list, adj_node);
      |         ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
04addbc
Tue 14 May 2024 12:31:32 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
7078e15
Tue 14 May 2024 12:34:06 AM UTC: 
 sudoku.c | 20 +++++++++++++++++++-
 1 file changed, 19 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:47:15: error: unused variable ‘k’ [-Werror=unused-variable]
   47 |     int i, j, k;
      |               ^
cc1: all warnings being treated as errors
Compilation failed
bb14929
Tue 14 May 2024 12:34:16 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
b38c54a
Tue 14 May 2024 12:38:38 AM UTC: 
 sudoku.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
37669ff
